made changes to viewport tag and @media in css to fix rendering on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -264,10 +264,6 @@ div.clear { clear: both; }
    ========================================================================== */
 
 @media screen and (max-device-width: 480px) {
-	#page-wrap {
-		width:	700px;
-		margin: 10px;
-	}
 
 }
 
